--- a/parque_banque_server/src/main/resources/application.properties
+++ b/parque_banque_server/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+spring.jpa.show-sql=false
+#spring.jpa.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/parquebanque
+spring.datasource.username=root
+spring.datasource.password=parquebanque
+
 
