--- a/parque_banque_server/src/main/resources/application.properties
+++ b/parque_banque_server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/parquebanque
+spring.datasource.url=jdbc:mysql://localhost:3306/parque-banque
 spring.datasource.username=root
 spring.datasource.password=parquebanque
 
