--- a/parque_banque_server/src/main/resources/application.properties
+++ b/parque_banque_server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# ===============================
+# = THYMELEAF
+# ===============================
 
 # Instantly see changes to your templates
 spring.thymeleaf.cache=false
@@ -5,12 +8,18 @@ spring.thymeleaf.cache=false
 # No need to put .html to reference templates
 spring.thymeleaf.suffix=.html
 
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+
+
 # Connection url for the database "data_repo_voorbeeld" and circumventing timezone issues
-spring.datasource.url = jdbc:mysql://miw-team-2.nl:3306/parque-banque?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/parque-banque?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 # Username and password
-spring.datasource.username = cursist
-spring.datasource.password = cohort
+spring.datasource.username = root
+spring.datasource.password = parquebanque
 
 # Keep the connection alive if idle for a long time (needed in production)
 #spring.datasource.testWhileIdle = true
