--- a/parque_banque_server/src/main/resources/application.properties
+++ b/parque_banque_server/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.thymeleaf.suffix=.html
 
 
 # Connection url for the database "data_repo_voorbeeld" and circumventing timezone issues
-spring.datasource.url = jdbc:mysql://localhost:3306/parque-banque?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/parque-banque?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 
 # Username and password
 spring.datasource.username = root
