zorgt voor een verbeterd sql script welke automatisch laadt bij properties create

--- a/parque_banque_server/src/main/resources/application.properties
+++ b/parque_banque_server/src/main/resources/application.properties
@@ -32,6 +32,7 @@ spring.jpa.show-sql = true
 # schema will be automatically updated accordingly to java entities found in
 # the project
 spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.initialization-mode=always
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
