--- a/parque_banque_server/pom.xml
+++ b/parque_banque_server/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>commons-lang</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
