--- a/parque_banque_server/src/main/resources/application.properties
+++ b/parque_banque_server/src/main/resources/application.properties
@@ -35,7 +35,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
 ##needed for building database
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
